# whisper

./: .gitignore  README.md  pyproject.toml
